features/fixing: added button && aligned text of default style of button

--- a/frontend/src/app/core/components/my-settings/components/profile/profile.component.scss
+++ b/frontend/src/app/core/components/my-settings/components/profile/profile.component.scss
@@ -58,6 +58,12 @@
       gap: 20px;
     }
   }
+  &-footer{
+    &_button{
+      height: 50px;
+      width: 100px;
+    }
+  }
 }
 
 .form-control{
